# bootcamp-python

./: .gitignore  .gitmodules  README.md
dia01/: README.md  kpi.py  main.py
dia02/: README.md  asd.py  desafio.py  main.py  python_intensivo.py
dia03/: README.md  desafio.py  main.py  teste.py
dia04/: README.md  desafio.py  main.py  teste.py
dia06/: README.md  pyproject.toml
dia07/: README.md  pyproject.toml
dia07/data/: base_produtos_100000.csv
dia07/dia07/: desafio.py  main.py
dia07/tests/: test_funcoes.py
dia08/: README.md  pyproject.toml
dia08/data/processed/: vendas.csv  vendas.parquet
dia08/data/raw/: vendas1.json  vendas3.json
dia08/src/: etl.py  main.py
dia09/: README.md  pyproject.toml
dia09/data/raw/: vendas2.json
dia09/src/: etl.py  log_decorator.py  loguru_decorator.py  time_log_decorator.py
dia10/: README.md  pyproject.toml
dia10/src/: cache_results.py  limit_calls.py  log_execution_time.py  main.py  retry_on_failure.py  validate_data.py
revisao01/: README.md  pyproject.toml
revisao01/src/: main.py
