[tool.poetry]
name = "dia08"
version = "0.1.0"
description = ""
authors = ["Bruno Chiconato <brunochiconato01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
pandera = "^0.20.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
