[tool.poetry]
name = "dia09"
version = "0.1.0"
description = ""
authors = ["Bruno Chiconato <brunochiconato01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
fastparquet = "^2024.5.0"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
